@@ -1,0 +1,18 @@
+<?php
+/**
+ * Class ProductNotFoundException.
+ *
+ * @package Packetery
+ */
+
+declare( strict_types=1 );
+
+namespace Packetery\Module\Exception;
+
+/**
+ * Class ProductNotFoundException.
+ *
+ * @package Packetery
+ */
+class ProductNotFoundException extends \Exception {
+}
