@@ -2,6 +2,7 @@
 = 1.8.6 =
 Fixed: The static function where it would falsely trim a submitted full number ending with 0.
 Fixed: Fixed validation for hidden default dimensions inputs with invalid values.
+Fixed: TypeError when getting cart product instance that could appear at checkout.
 Updated: Syncing order statuses one by one instead of a single batch.
 
 = 1.8.5 =
